--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,33 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+arrow==1.2.2
+binaryornot==0.4.4
+certifi==2021.10.8
+chardet==4.0.0
+charset-normalizer==2.0.12
+click==8.1.3
+cookiecutter==1.7.3
+idna==3.3
+Jinja2==3.1.2
+jinja2-time==0.2.0
+joblib==1.1.0
+MarkupSafe==2.1.1
+marshmallow==3.15.0
+marshmallow-dataclass==8.5.8
+mypy-extensions==0.4.3
+numpy==1.22.3
+packaging==21.3
+pandas==1.4.2
+poyo==0.5.0
+pyparsing==3.0.8
+python-dateutil==2.8.2
+python-slugify==6.1.2
+pytz==2022.1
+PyYAML==6.0
+requests==2.27.1
+scikit-learn==1.0.2
+scipy==1.8.0
+six==1.16.0
+text-unidecode==1.3
+threadpoolctl==3.1.0
+typing-inspect==0.7.1
+typing_extensions==4.2.0
+urllib3==1.26.9
