--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
+antlr4-python3-runtime==4.8
 arrow==1.2.2
+attrs==21.4.0
 binaryornot==0.4.4
+black==22.3.0
 certifi==2021.10.8
 chardet==4.0.0
 charset-normalizer==2.0.12
 click==8.1.3
 cookiecutter==1.7.3
+hydra-core==1.1.2
 idna==3.3
+importlib-resources==5.2.3
+iniconfig==1.1.1
 Jinja2==3.1.2
 jinja2-time==0.2.0
 joblib==1.1.0
@@ -14,10 +20,16 @@ marshmallow==3.15.0
 marshmallow-dataclass==8.5.8
 mypy-extensions==0.4.3
 numpy==1.22.3
+omegaconf==2.1.2
 packaging==21.3
 pandas==1.4.2
+pathspec==0.9.0
+platformdirs==2.5.2
+pluggy==1.0.0
 poyo==0.5.0
+py==1.11.0
 pyparsing==3.0.8
+pytest==7.1.2
 python-dateutil==2.8.2
 python-slugify==6.1.2
 pytz==2022.1
@@ -28,6 +40,8 @@ scipy==1.8.0
 six==1.16.0
 text-unidecode==1.3
 threadpoolctl==3.1.0
+tomli==2.0.1
 typing-inspect==0.7.1
 typing_extensions==4.2.0
 urllib3==1.26.9
+zipp==3.8.0
