--- a/tox.ini
+++ b/tox.ini
@@ -2,3 +2,8 @@
 max-line-length = 127
 max-complexity = 10
 
+[mypy]
+python_version = 3.8
+disallow_untyped_defs = True
+ignore_missing_imports = True
+exclude = env.*|venv.*
